tests/tooling/fixtures/native/recovery/positive/message_send_nil_conditional_receiver_elision.objc3
// Positive fixture: compile-time conditional nil receiver elides runtime dispatch.
module MessageSendNilConditionalReceiverElision;

fn main() {
  let sent = [(1 ? nil : 1) ping];
  return sent + 22;
}
