tests/tooling/fixtures/native/recovery/negative/negative_misplaced_qualifier_statement_pure.objc3
// Negative fixture: declaration qualifiers are invalid in statement position.
// Expected diagnostic code(s): O3P100.
module NegativeMisplacedQualifierStatementPure;

fn main() -> i32 {
  pure let value = 1;
  return value;
}